<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jenkins-ci</groupId>
        <artifactId>jenkins</artifactId>
        <version>1.130</version>
    </parent>

    <groupId>org.jenkins-ci</groupId>
    <artifactId>trilead-ssh2</artifactId>
    <version>${revision}-${changelist}</version>

    <name>Ganymed SSH2 for Java</name>
    <description>Ganymed SSH2 for Java is a library which implements the SSH-2 protocol in pure Java</description>

    <url>https://github.com/jenkinsci/trilead-ssh2/tree/main</url>
    <!-- Retained for historical purposes, this is maintained at the above URL
    <url>http://svn.svnkit.com/repos/3rdparty/com.trilead.ssh2/tags/1.0.0-build217/trilead-ssh2/</url>
    -->
    <licenses>
        <!-- Current source and license location -->
        <license>
            <name>BSD Style license</name>
            <url>https://github.com/jenkinsci/trilead-ssh2/blob/main/LICENSE.txt</url>
        </license>
        <license>
            <!-- This is no longer maintained at the below url -->
            <name>BSD style license</name>
            <url>http://www.ganymed.ethz.ch/ssh2/LICENSE.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>mc1arke</id>
            <name>Michael Clarke</name>
            <email>michael.m.clarke@gmail.com</email>
        </developer>
        <developer>
            <id>kuisathaverat</id>
            <name>Ivan Fernandez</name>
            <email>kuisathaverat@gmail.com</email>
        </developer>
        <developer>
            <id>speedythesnail</id>
            <name>Steven Jubb</name>
            <email>steven.jubb@shelltech.net</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
        <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
        <url>https://github.com/${gitHubRepo}</url>
        <tag>${scmTag}</tag>
    </scm>

    <repositories>
        <repository>
            <id>repo.jenkins-ci.org</id>
            <url>https://repo.jenkins-ci.org/public/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>repo.jenkins-ci.org</id>
            <url>https://repo.jenkins-ci.org/public/</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.18.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.i2p.crypto</groupId>
            <artifactId>eddsa</artifactId>
            <version>0.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.connectbot</groupId>
            <artifactId>jbcrypt</artifactId>
            <version>1.0.2</version>
        </dependency>
        <dependency>
            <groupId>com.google.crypto.tink</groupId>
            <artifactId>tink</artifactId>
            <version>1.17.0</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.protobuf</groupId>
                    <artifactId>protobuf-java</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <version>1.20.6</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--Use a bridge to log slf4j to jul logging.-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>2.0.17</version> <!-- Or the latest version -->
            <scope>test</scope>
        </dependency>
        <!-- Used to verify xml -->
        <dependency>
            <groupId>org.xmlunit</groupId>
            <artifactId>xmlunit-core</artifactId>
            <version>2.10.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.xmlunit</groupId>
            <artifactId>xmlunit-assertj3</artifactId>
            <version>2.10.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.xmlunit</groupId>
            <artifactId>xmlunit-matchers</artifactId>
            <version>2.10.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src</sourceDirectory>
        <testSourceDirectory>test</testSourceDirectory>
        <testResources>
            <testResource>
                <directory>test</directory>
                <includes>
                    <include>**</include>
                </includes>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>display-info</id>
                        <configuration>
                            <rules>
                                <enforceBytecodeVersion>
                                    <excludes combine.children="append">
                                        <exclude>org.connectbot.jbcrypt</exclude>
                                    </excludes>
                                </enforceBytecodeVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <properties>
        <revision>build-217-jenkins</revision>
        <changelist>999999-SNAPSHOT</changelist>
        <gitHubRepo>jenkinsci/trilead-ssh2</gitHubRepo>
        <!-- TODO fix medium-threshold violations -->
        <spotbugs.threshold>High</spotbugs.threshold>
        <source>17</source>
        <target>17</target>
    </properties>

</project>
